# Task/models/task.js
@@ -1,9 +1,0 @@
-const mongoose = require('mongoose');
-
-const taskSchema = new mongoose.Schema({
-  title: { type: String, required: true },
-  description: { type: String, required: true },
-  completed: { type: Boolean, default: false },
-}, { timestamps: true });
-
-module.exports = mongoose.model('Task', taskSchema);
