# Task/models/taskModel.js
@@ -1,0 +1,19 @@
+const mongoose = require('mongoose');
+
+const taskSchema = new mongoose.Schema({
+  title: {
+    type: String,
+    required: true,
+  },
+  description: {
+    type: String,
+    required: true,
+  },
+  completed: {
+    type: Boolean,
+    default: false,
+  },
+});
+
+const Task = mongoose.model('Task', taskSchema);
+module.exports = Task;
